--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Trabalho de IA</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="./scripts/tree.js"></script>
     <script src="./scripts/render.js"></script>
-    <script src="./scripts/index.js"></script>
     <style>
         .node circle {
             fill: #fff;
@@ -28,19 +26,7 @@
     </style>
 </head>
 <body class="bg-gray-100 flex flex-col items-center min-h-screen">
-    <div class="bg-white shadow-md p-8 rounded-lg flex flex-col justify-center items-center w-full max-w-xl mt-3">
-        <div>
-            <label for="citySelectRoot" class="block text-gray-700 text-sm font-bold mb-2">Escolha uma origem:</label>
-            <select id="citySelectRoot" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
-            </select>
-        </div>
-        <div>
-            <label for="citySelect" class="block text-gray-700 text-sm font-bold mb-2">Escolha um destino:</label>
-            <select id="citySelect" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
-            </select>
-        </div>
-        <button onclick="findSolution(document.getElementById('citySelectRoot').value,document.getElementById('citySelect').value)" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mt-3">Buscar</button>
-    </div>
+    <h1 class="text-center font-bold text-4x1">Representacao em Arvore</h1>
     <svg class="w-full h-full"></svg>
 </body>
 </html>
